--- a/kratio/kratio.css
+++ b/kratio/kratio.css
@@ -1,3 +1,20 @@
+section {
+	opacity: 0;
+}
+
+div {
+	opacity:0;
+}
+
+header{
+	opacity:0;
+}
+
+#working {
+	height: 100px;
+	width: 100px;
+	background-color: blue;
+}
 
 
 body {
@@ -5,6 +22,7 @@ body {
   	background-color: silver;
   	border: 0px black solid;
   	border-radius: 15px;
+		opacity: 0;
   }
 
 
@@ -198,4 +216,9 @@ tr {
 
 ul img {
 	width: 300px;
+}
+
+.mod {
+	height: 0px;
+	width: 0px;
 }
